--- a/01. Partie législative/Article L5142-1 - 6361514.md
+++ b/01. Partie législative/Article L5142-1 - 6361514.md
@@ -1,16 +1,15 @@
 # Article L5142-1
 
 Dans le département de la Guyane, les immeubles domaniaux compris dans un plan d'occupation des sols opposable aux tiers, un
-plan d'urbanisme approuvé ou un document d'urbanisme en tenant lieu, peuvent faire l'objet : 
+plan d'urbanisme approuvé ou un document d'urbanisme en tenant lieu, peuvent faire l'objet :
 
 1° De concessions gratuites aux collectivités territoriales et à leurs groupements lorsqu'ils sont destinés à être affectés à
 l'aménagement d'équipements collectifs, à la construction de logements à vocation très sociale et locatifs aidés ou à des
-services ou usages publics ; 
+services ou usages publics ;
 
-2° De cessions gratuites aux titulaires des concessions mentionnées au 1° ci-dessus ; 
+2° De cessions gratuites aux titulaires des concessions mentionnées au 1° ci-dessus ;
 
-3° De cessions gratuites aux collectivités territoriales, à leurs groupements ou à un établissement public d'aménagement créé
-en application du chapitre Ier du titre II du livre III du code de l'urbanisme en vue de constituer sur le territoire d'une
+3° De cessions gratuites aux collectivités territoriales ou à leurs groupements en vue de constituer sur le territoire d'une
 commune des réserves foncières dans les conditions fixées aux articles L. 221-1 et L. 221-2 du code de l'urbanisme, à
 condition que les biens soient libres de toute occupation ou ne soient pas confiés en gestion à des tiers. La superficie
 globale cédée en une ou plusieurs fois ne peut excéder sur chaque commune une superficie de référence égale à dix fois la
@@ -18,11 +17,14 @@ superficie des parties agglomérées de la commune de situation des biens cédé
 la date de la première cession gratuite. Lorsque les cessions gratuites sont consenties à un autre acquéreur que la commune,
 elles doivent faire l'objet d'un accord préalable de la commune de situation des biens cédés ;
 
+3° bis De cessions gratuites à l'établissement public foncier et d'aménagement de Guyane créé en application de l'article L.
+321-36-1 du même code. Ces cessions doivent faire l'objet d'un accord préalable de la commune de situation des biens cédés ;
+
 4° De cessions gratuites au grand port maritime de la Guyane, pour l'accomplissement de ses missions de service public.
 
 Peuvent également être cédés gratuitement aux collectivités territoriales et à leurs groupements les immeubles dépendant du
 domaine privé de l'Etat dont l'expropriation a été déclarée d'utilité publique en vue de réaliser l'un des objectifs
-mentionnés au 1° ci-dessus. 
+mentionnés au 1° ci-dessus.
 
 Les concessions et cessions mentionnées au présent article peuvent faire l'objet de prescriptions particulières visant à
 préserver l'environnement. Le non-respect de ces prescriptions peut entraîner l'abrogation de l'acte de concession ou de
@@ -32,8 +34,7 @@ cession par le représentant de l'Etat dans le département.
 
 _Modifié par_:
 
-  - Loi n°2010-1657 du 29 décembre 2010 - art. 169 (VT)
-  - Loi n°2015-1268 du 14 octobre 2015 - art. 19
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 25
 
 _Anciens textes_:
 
