--- a/01. Partie législative/Article L3211-6 - 6361424.md
+++ b/01. Partie législative/Article L3211-6 - 6361424.md
@@ -5,6 +5,12 @@ réalisation d'opérations d'aménagement ou de construction et pour les cession
 l'article L. 3211-7 lorsqu'elles comptent plus de 50 % de logements sociaux, dans les conditions fixées par décret en Conseil
 d'Etat. Ce décret fixe notamment les règles applicables à l'utilisation des biens cédés.
 
+Les immeubles bâtis et non bâtis qui font partie du domaine privé de l'Etat peuvent être cédés pour contribuer à la mise en
+œuvre des opérations d'aménagement définies à l'article L. 300-1 du code de l'urbanisme dont la réalisation est prévue par un
+contrat de projet partenarial d'aménagement mentionné à l'article L. 312-1 du même code. Ces terrains sont cédés à l'amiable
+à la collectivité territoriale ou à l'établissement public cocontractant à l'initiative de l'opération mentionné au même
+article L. 312-1 ou à l'opérateur désigné dans ce contrat.
+
 **Liens relatifs à cet article**
 
 _Codifié par_:
@@ -13,9 +19,13 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Loi n°2017-86 du 27 janvier 2017 - art. 151
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 23
 
 _Cité par_:
 
   - Code général de la propriété des personnes publ... - art. L3211-24 (V)
   - Code général de la propriété des personnes publ... - art. R3211-11 (V)
+
+_Cite_:
+
+  - Code de l'urbanisme - art. L300-1
