--- a/01. Partie législative/Article L5112-4 - 6361488.md
+++ b/01. Partie législative/Article L5112-4 - 6361488.md
@@ -1,24 +1,29 @@
 # Article L5112-4
 
-L'Etat peut consentir aux communes et aux organismes ayant pour objet la réalisation d'opérations d'habitat social, après
-déclassement, la cession gratuite à leur profit de terrains dépendant du domaine public maritime de l'Etat. 
+L'Etat peut consentir aux communes, aux organismes ayant pour objet la réalisation d'opérations d'habitat social et, sur
+proposition des communes, aux organismes agréés exerçant les activités mentionnées à l'article L. 365-1 du code de la
+construction et de l'habitation, après déclassement, la cession gratuite à leur profit de terrains dépendant du domaine
+public maritime de l'Etat.
 
 Cette cession gratuite ne peut concerner que des terrains situés dans les espaces urbains et les secteurs occupés par une
-urbanisation diffuse, délimités conformément aux articles L. 5112-1 et L. 5112-2. 
+urbanisation diffuse, délimités conformément aux articles L. 5112-1 et L. 5112-2 du présent code.
 
-Elle doit avoir pour but la réalisation par la commune d'opérations d'aménagement à des fins d'utilité publique ou la
-réalisation par les organismes compétents d'opérations d'habitat social. 
+Elle doit avoir pour but la réalisation par la commune d'opérations d'aménagement à des fins d'utilité publique, la
+réalisation par les organismes compétents d'opérations d'habitat social ou la réalisation, par les organismes agréés
+mentionnés au premier alinéa du présent article, d'activités mentionnées à l'article L. 365-1 du code de la construction et
+de l'habitation.
 
 Toutefois, lorsque les terrains ont été équipés par l'agence pour la mise en valeur des espaces urbains de la zone dite des
 cinquante pas géométriques, la cession est faite au prix correspondant au coût des aménagements réalisés sur les terrains
-cédés, et financés par l'agence. 
+cédés, et financés par l'agence.
 
 Lorsqu'ils n'ont pas été utilisés dans un délai de dix ans à compter de la date de la cession conformément à l'objet qui l'a
 justifiée, les terrains cédés reviennent dans le patrimoine de l'Etat, à charge pour celui-ci de rembourser, le cas échéant,
-aux cessionnaires le coût des aménagements qu'ils auront acquitté. 
+aux cessionnaires le coût des aménagements qu'ils auront acquitté.
 
 Un décret en Conseil d'Etat fixe les conditions dans lesquelles les terrains autres que ceux libres de toute occupation
-peuvent être cédés aux communes ou aux organismes d'habitat social.
+peuvent être cédés aux communes, aux organismes d'habitat social ou aux organismes agréés mentionnés au premier alinéa du
+présent article.
 
 **Liens relatifs à cet article**
 
@@ -34,7 +39,11 @@ _Cité par_:
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 199
 
 _Anciens textes_:
 
@@ -42,4 +51,4 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L5112-1 (V)
+  - Code général de la propriété des personnes publiques. - art. L5112-1
