--- a/01. Partie législative/Article L3211-13-1 - 26957590.md
+++ b/01. Partie législative/Article L3211-13-1 - 26957590.md
@@ -1,27 +1,26 @@
 # Article L3211-13-1
 
 I. – Nonobstant les dispositions législatives particulières applicables aux établissements publics de l'Etat et aux sociétés
-mentionnées à l'article 141 de la loi n° 2006-1771 du 30 décembre 2006 de finances rectificative pour 2006, les articles L.
-3211-7 et L. 3211-7-1 sont applicables, dans des conditions fixées par décret en Conseil d'Etat, à l'aliénation des terrains,
-bâtis ou non, du domaine privé leur appartenant ou dont la gestion leur a été confiée par la loi.
+mentionnées à l'article 141 de la loi n° 2006-1771 du 30 décembre 2006 de finances rectificative pour 2006, l'article L.
+3211-7 est applicable, dans des conditions fixées par décret en Conseil d'Etat, à l'aliénation des terrains, bâtis ou non, du
+domaine privé leur appartenant ou dont la gestion leur a été confiée par la loi.
 
 Le premier alinéa du présent I s'applique aux établissements publics dont la liste est fixée par décret.
 
 Pour les sociétés mentionnées à l'article 141 de la loi n° 2006-1771 du 30 décembre 2006 de finances rectificative pour 2006,
-l'ensemble des cessions doit être réalisé en application des articles L. 3211-7 et L. 3211-7-1 du présent code.
+l'ensemble des cessions doit être réalisé en application de l'article L. 3211-7 du présent code.
 
 II. – Les décrets en Conseil d'Etat mentionnés au I du présent article peuvent adapter les modalités de détermination du prix
-de cession prévues aux articles L. 3211-7 et L. 3211-7-1 pour tenir compte de la situation de chaque établissement ou société
-et du volume des cessions envisagées. Ces décrets déterminent les cas dans lesquels les établissements publics ou les
-sociétés mentionnés au I du présent article sont substitués à l'Etat pour l'application des mêmes articles L. 3211-7 et L.
-3211-7-1.
+de cession prévues à l'article L. 3211-7 pour tenir compte de la situation de chaque établissement ou société et du volume
+des cessions envisagées. Ces décrets déterminent les cas dans lesquels les établissements publics ou les sociétés mentionnés
+au I du présent article sont substitués à l'Etat pour l'application de l'article L. 3211-7.
 
 **Liens relatifs à cet article**
 
 _Cite_:
 
   - Loi n°2006-1771 du 30 décembre 2006 - art. 141
-  - Code général de la propriété des personnes publ... - art. L3211-7 (V)
+  - Code général de la propriété des personnes publiques. - art. L3211-7
 
 _Cité par_:
 
@@ -39,4 +38,4 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2017-257 du 28 février 2017 - art. 50
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 24
