--- a/01. Partie législative/Article L3211-7 - 6361425.md
+++ b/01. Partie législative/Article L3211-7 - 6361425.md
@@ -1,16 +1,17 @@
 # Article L3211-7
 
 I. – L'Etat peut procéder à l'aliénation de terrains de son domaine privé à un prix inférieur à la valeur vénale lorsque ces
-terrains, bâtis ou non, sont destinés à la réalisation de programmes comportant essentiellement des logements dont une partie
+terrains, bâtis ou non, sont destinés à la réalisation de programmes comportant majoritairement des logements dont une partie
 au moins est réalisée en logement social. Pour la part du programme destinée aux logements sociaux, la décote ainsi
 consentie, qui peut atteindre 100 % de la valeur vénale du terrain, est fixée en fonction de la catégorie à laquelle ces
 logements appartiennent. Elle prend notamment en considération les circonstances locales tenant à la situation du marché
 foncier et immobilier, à la situation financière de l'acquéreur du terrain, à la proportion et à la typologie des logements
 sociaux existant sur le territoire de la collectivité considérée et aux conditions financières et techniques de l'opération.
-La décote ne saurait excéder 50 % pour les logements financés en prêts locatifs sociaux et pour les logements en accession à
-la propriété bénéficiant des dispositifs mentionnés au VIII, à l'exception des logements en accession à la propriété en
-Guadeloupe, en Guyane, en Martinique et à La Réunion qui bénéficient d'une aide destinée aux personnes physiques à faibles
-revenus, pour financer l'acquisition de logements évolutifs sociaux.
+La décote ne saurait excéder 50 % pour les logements financés en prêts locatifs sociaux, pour les logements faisant l'objet
+d'un contrat de bail réel solidaire et pour les logements en accession à la propriété bénéficiant des dispositifs mentionnés
+au VIII, à l'exception des logements en accession à la propriété en Guadeloupe, en Guyane, en Martinique et à La Réunion qui
+bénéficient d'une aide destinée aux personnes physiques à faibles revenus, pour financer l'acquisition de logements évolutifs
+sociaux.
 
 Pour les communes qui ne font pas l'objet d'un constat de carence, dans le cadre d'un programme de logements sociaux, dans
 les conditions fixées au présent article, une décote est possible pour la part du programme relative aux équipements publics
@@ -97,38 +98,20 @@ différentes de celles prises en compte pour la fixation du prix de cession, le 
 à l'avantage financier indûment consenti.
 
 Lorsque la cession d'un terrain, bâti ou non, du domaine privé de l'Etat s'inscrit dans une opération d'aménagement, au sens
-de l'article L. 300-1 du code de l'urbanisme, qui porte sur un périmètre de plus de cinq hectares, et après accord des
-ministres chargés du logement et du domaine, au vu du rapport transmis par le représentant de l'Etat dans la région, la
-convention conclue entre le représentant de l'Etat dans la région et l'acquéreur peut prévoir une réalisation de l'opération
-par tranches échelonnées sur une durée totale supérieure à cinq ans et permettant chacune un contrôle du dispositif de
-décote, dans les conditions prévues aux troisième et quatrième alinéas du présent V.
+de l'article L. 300-1 du code de l'urbanisme, et après accord des ministres chargés du logement et du domaine, au vu du
+rapport transmis par le représentant de l'Etat dans la région, la convention conclue entre le représentant de l'Etat dans la
+région et l'acquéreur peut prévoir une réalisation de l'opération par tranches échelonnées sur une durée totale supérieure à
+cinq ans dont la première doit être réalisée dans un délai maximal de cinq ans, et permettant chacune un contrôle du
+dispositif de décote, dans les conditions prévues aux troisième et quatrième alinéas du présent V.
 
 La convention peut prévoir, en outre, le droit de réservation d'un contingent plafonné à 10 % des logements sociaux du
 programme, au profit de l'administration qui cède son terrain avec décote, pour le logement de ses agents, au-delà du
 contingent dont dispose l'Etat.
 
-V bis. – L'Etat peut céder à titre onéreux à la société mentionnée au deuxième alinéa du I de l'article 141 de la loi n°
-2006-1771 du 30 décembre 2006 de finances rectificative pour 2006 la propriété de portefeuilles de terrains, bâtis ou non, de
-son domaine privé.
-
-Chacune de ces cessions fait l'objet d'une convention jointe à l'acte d'aliénation, conclue entre le ministre chargé du
-domaine et l'acquéreur, après avis du ministre chargé du logement, et au vu des rapports transmis par les représentants de
-l'Etat dans les régions concernées et de l'avis de la commission nationale mentionnée au VII. Cette convention détermine les
-objectifs du programme de logements à réaliser. Elle peut prévoir une réalisation des opérations sur une durée totale
-supérieure à cinq ans. Elle prévoit les modalités permettant un contrôle de la réalisation des programmes et de l'application
-du dispositif de décote prévu au présent article.
-
-Le prix de cession est déterminé conformément au I. Il fait l'objet d'un versement en deux temps. Au moment de la cession, la
-société mentionnée au premier alinéa du présent V bis verse un acompte correspondant à 40 % de la valeur vénale cumulée des
-actifs du portefeuille. La valeur vénale retenue est la valeur vénale de marché du logement libre. Lors de l'obtention des
-autorisations d'urbanisme, ladite société effectue un second versement pour chaque actif sur le fondement du prix définitif
-arrêté par détermination de la décote prévue au présent article, en prenant en compte le programme de logement réalisé sur le
-bien et les circonstances locales. Si le prix définitif d'un actif est inférieur à 40 % de sa valeur vénale retenue dans le
-calcul de l'acompte, la somme à restituer par l'Etat s'impute sur les sommes que la société doit au titre de l'acquisition
-d'autres actifs du portefeuille.
+V bis. (abrogé)
 
 VI. – Le représentant de l'Etat dans la région, assisté du comité régional de l'habitat, contrôle l'effectivité de toute
-convention annexée à un acte d'aliénation et définie aux V ou V bis du présent article. A cet effet, l'acquéreur des terrains
+convention annexée à un acte d'aliénation et définie au V du présent article. A cet effet, l'acquéreur des terrains
 mentionnés au 2° du II rend compte de l'état d'avancement du programme au comité régional de l'habitat ainsi qu'à la commune
 sur le territoire de laquelle se trouve le terrain cédé. Cette obligation prend fin au jour de la livraison effective du
 programme de logements ou au jour de la résiliation de la convention.
@@ -181,8 +164,11 @@ décote prévue au présent article :
 a) Les logements occupés par des titulaires de contrats de location-accession mentionnés au 6° de l'article L. 351-2 du même
 code ;
 
-b) Les logements faisant l'objet d'une opération d'accession dans les conditions définies au huitième alinéa de l'article L.
-411-2 dudit code.
+b) Les logements faisant l'objet d'une opération d'accession dans les conditions définies au dixième alinéa de l'article L.
+411-2 dudit code ;
+
+c) Les logements faisant l'objet d'un contrat de bail réel solidaire en application du chapitre V du titre V du livre II du
+même code.
 
 IX. – Un décret en Conseil d'Etat précise les conditions d'application des I à VII.
 
@@ -191,7 +177,7 @@ IX. – Un décret en Conseil d'Etat précise les conditions d'application des I
 _Cite_:
 
   - Loi n°2000-614 du 5 juillet 2000 - art. 1
-  - Loi n°2006-1771 du 30 décembre 2006 - art. 141
+  - Loi n°2006-1771 du 30 décembre 2006 - art. 141 (V)
   - Code de l'action sociale et des familles - art. L345-1
   - Code de l'urbanisme - art. L300-1
   - Code de la construction et de l'habitation. - art. L351-2
@@ -199,8 +185,8 @@ _Cite_:
   - Code de la construction et de l'habitation. - art. L365-1
   - Code de la construction et de l'habitation. - art. L365-2
   - Code de la construction et de l'habitation. - art. L411-2
-  - Code de la construction et de l'habitation. - art. L443-7
-  - Code de la construction et de l'habitation. - art. L481-1
+  - Code de la construction et de l'habitation. - art. L443-7 (V)
+  - Code de la construction et de l'habitation. - art. L481-1 (V)
   - Code du patrimoine - art. L522-2
 
 _Cité par_:
@@ -241,7 +227,9 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2018-607 du 13 juillet 2018 - art. 47
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 23
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 24
+  - Loi n°2018-1021 du 23 novembre 2018 - art. 88 (V)
 
 _Anciens textes_:
 
