--- a/02. Partie réglementaire/Article R3211-17-1 - 27311714.md
+++ b/02. Partie réglementaire/Article R3211-17-1 - 27311714.md
@@ -1,24 +1,24 @@
 # Article R3211-17-1
 
 La personne qui souhaite acquérir un terrain du domaine privé de l'Etat éligible à la décote prévue à l'article L. 3211-7
-adresse un dossier de demande au préfet du département du lieu de situation de ce terrain. Ce dossier comporte : 
+adresse un dossier de demande au préfet du département du lieu de situation de ce terrain. Ce dossier comporte :
 
 1° Le programme à réaliser sur ce terrain et indiquant la surface de plancher totale de logements, la surface de plancher
 affectée à chaque catégorie de logements mentionnée au II de l'article R. 3211-15, le cas échéant, la surface de plancher
-d'équipements publics et la liste de ces équipements, ainsi que la surface de plancher de tout autre élément du programme ; 
+d'équipements publics et la liste de ces équipements, ainsi que la surface de plancher de tout autre élément du programme ;
 
 2° Une estimation du prix de revient des logements locatifs sociaux ou assimilés réalisée aux conditions économiques en
 vigueur à la date de remise de la proposition de prix ainsi que du prix de vente des logements en accession à la propriété
-mentionnés au VIII de l'article L. 3211-7 ; 
+mentionnés au VIII de l'article L. 3211-7 ou faisant l'objet d'un bail réel solidaire ;
 
 3° Un plan de financement de la part du programme destinée aux logements mentionnés au II de l'article R. 3211-15 précisant
-les contributions financières attendues de l'Etat et, le cas échéant, d'autres financeurs ; 
+les contributions financières attendues de l'Etat et, le cas échéant, d'autres financeurs ;
 
 4° Un échéancier prévisionnel détaillé de l'opération qui indique les conditions dans lesquelles l'obligation de réalisation
-du programme dans un délai de cinq ans sera respectée ; 
+du programme dans un délai de cinq ans sera respectée ;
 
 5° Le cas échéant, les éléments nécessaires à l'application d'une décote pour la part du programme consacrée aux équipements
-publics dans les conditions prévues à l'article R. 3211-17. 
+publics dans les conditions prévues à l'article R. 3211-17.
 
 Lorsque le candidat acquéreur n'est pas une personne bénéficiant des subventions et prêts prévus à l'article R. 331-14 du
 code de la construction et de l'habitation, le dossier précise en outre les conditions et modalités générales du transfert au
@@ -28,7 +28,7 @@ bailleur des logements sociaux ou des droits et obligations afférents aux logem
 
 _Modifié par_:
 
-  - Décret n°2016-1160 du 25 août 2016 - art. 6
+  - Décret n°2019-423 du 9 mai 2019 - art. 3
 
 _Cité par_:
 
