--- a/02. Partie réglementaire/Article R3211-32-2 - 28092021.md
+++ b/02. Partie réglementaire/Article R3211-32-2 - 28092021.md
@@ -1,16 +1,16 @@
 # Article R3211-32-2
 
 La décote prévue à l'article L. 3211-7 peut être appliquée lorsqu'un terrain mentionné à l'article R. 3211-32-1 est aliéné en
-vue de recevoir au moins 75 % de surface de plancher affectée au logement et comportant des logements locatifs sociaux
+vue de recevoir plus de 50 % de surface de plancher affectée au logement et comportant des logements locatifs sociaux
 mentionnés aux 3° et 5° de l'article L. 351-2 du code de la construction et de l'habitation, des logements assimilés aux
 logements locatifs sociaux ou des logements en accession à la propriété mentionnés au VIII de l'article L. 3211-7 du présent
-code.
+code ou faisant l'objet d'un bail réel solidaire.
 
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2013-936 du 18 octobre 2013 - art. 1
+  - Décret n°2019-423 du 9 mai 2019 - art. 4
 
 _Cité par_:
 
