--- a/02. Partie réglementaire/Article R3211-15 - 24885664.md
+++ b/02. Partie réglementaire/Article R3211-15 - 24885664.md
@@ -19,8 +19,9 @@ mentionnées à l'article L. 345-1 du code de l'action sociale et des familles ;
 social ;
 
 3° Catégorie 3 : les logements locatifs ou les résidences de logement pour étudiants financés en prêt locatif social, les
-logements occupés par les titulaires de contrats de location-accession et ceux faisant l'objet d'une opération d'accession
-mentionnés au VIII de l'article L. 3211-7.
+logements occupés par les titulaires de contrats de location-accession, les logements faisant l'objet d'un bail réel
+solidaire lorsqu'ils ne font pas partie des catégories 1 ou 2 mentionnées au 1° et au 2° du présent II et ceux faisant
+l'objet d'une opération d'accession mentionnés au VIII de l'article L. 3211-7.
 
 III. – Dans les limites fixées au IV, la décote est d'autant plus élevée que les critères suivants sont satisfaits :
 
@@ -147,7 +148,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Décret n°2016-1160 du 25 août 2016 - art. 3
+  - Décret n°2019-423 du 9 mai 2019 - art. 2
 
 _Anciens textes_:
 
