--- a/01. Partie législative/Article L2222-9 - 6361341.md
+++ b/01. Partie législative/Article L2222-9 - 6361341.md
@@ -2,14 +2,14 @@
 
 Les biens mobiliers dont, à l'occasion d'une procédure pénale, la propriété a été transférée à l'Etat suite à une décision
 judiciaire définitive peuvent être affectés, à titre gratuit, dans les conditions déterminées par arrêté interministériel, à
-des services de police, des unités de gendarmerie ou des services de l'administration des douanes lorsque ces services ou
-unités effectuent des missions de police judiciaire.
+des services de police, des unités de gendarmerie, des services de l'administration des douanes ou des services de l'Office
+français de la biodiversité lorsque ces services ou unités effectuent des missions de police judiciaire.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
 
 _Cité par_:
 
@@ -18,6 +18,10 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. L5532-1 (V)
   - Code général de la propriété des personnes publ... - art. L5732-2 (V)
   - Code général de la propriété des personnes publ... - art. R3211-35 (V)
+
+_Modifié par_:
+
+  - Loi n°2019-773 du 24 juillet 2019 - art. 4
 
 _Anciens textes_:
 
