--- a/02. Partie réglementaire/Article R2124-70 - 24885191.md
+++ b/02. Partie réglementaire/Article R2124-70 - 24885191.md
@@ -1,9 +1,10 @@
 # Article R2124-70
 
-Le directeur départemental des finances publiques est compétent pour déterminer la redevance prévue à l'article R. 2124-68 et
-pour la réviser ou la modifier. 
+Le directeur départemental des finances publiques ou l'autorité militaire, lorsque l'immeuble est mis à disposition du
+ministère de la défense est compétent pour déterminer la redevance prévue à l'article R. 2124-68 et pour la réviser ou la
+modifier.
 
-La redevance due commence à courir à compter de la date de l'occupation des locaux. 
+La redevance due commence à courir à compter de la date de l'occupation des locaux.
 
 La redevance et, s'il y a lieu, les remboursements à la charge de l'occupant font l'objet d'un précompte mensuel, dans des
 conditions définies par arrêté du ministre chargé du budget, sur la rémunération de l'agent bénéficiaire.
@@ -16,7 +17,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2012-752 du 9 mai 2012 - art. 1
+  - Décret n°2019-793 du 26 juillet 2019 - art. 1
 
 _Anciens textes_:
 
