--- a/02. Partie réglementaire/Article R2124-79 - 25850639.md
+++ b/02. Partie réglementaire/Article R2124-79 - 25850639.md
@@ -5,18 +5,27 @@ d'autorisations d'occupation précaire en vue de fournir un logement à ses agen
 de ce logement ne soit liée à des considérations de service. Dans ce cas, une redevance est mise à la charge de l'agent. Elle
 est égale, sauf disposition spéciale liée à l'usage social de l'immeuble, à la valeur locative réelle des locaux occupés,
 déduction faite d'un abattement de 15 % destiné à tenir compte de la précarité de l'occupation mentionnée dans
-l'autorisation.
+l'autorisation. 
+
+Le taux de l'abattement mentionné à l'alinéa précédent peut être porté jusqu'à 50 % pour les militaires ainsi que pour les
+agents civils en activité au sein du ministère de la défense et des établissements publics placés sous sa tutelle, occupant
+un immeuble mis à disposition du ministère de la défense. Un arrêté conjoint du ministre de la défense et du ministre chargé
+du domaine établit un classement du territoire national en zones géographiques en tenant compte du déséquilibre entre l'offre
+et la demande de logements et définit le taux d'abattement applicable à chacune de ces zones. Pour l'application du présent
+alinéa, la valeur locative réelle des locaux occupés est fixée par l'autorité militaire, par dérogation à l'article R.
+2125-1.
 
 **Liens relatifs à cet article**
-
-_Créé par_:
-
-  - Décret n°2012-752 du 9 mai 2012 - art. 3
 
 _Cité par_:
 
   - Décret n°2012-752 du 9 mai 2012 - art. 8 (V)
 
+_Modifié par_:
+
+  - Décret n°2019-793 du 26 juillet 2019 - art. 2
+
 _Cite_:
 
   - Code général de la propriété des personnes publiques. - art. R2124-64
+  - Code général de la propriété des personnes publiques. - art. R2125-1
