--- a/01. Partie législative/Article L3211-7 - 6361425.md
+++ b/01. Partie législative/Article L3211-7 - 6361425.md
@@ -77,7 +77,7 @@ présent III et du montant de la décote consentie.
 
 IV. – Pour les programmes ayant bénéficié de la cession d'un terrain avec une décote dans les conditions du présent article :
 
-1° Les conventions mentionnées à l'article L. 351-2 du code de la construction et de l'habitation sont d'une durée au moins
+1° Les conventions mentionnées à l'article L. 831-1 du code de la construction et de l'habitation sont d'une durée au moins
 égale à vingt ans. Cette durée ne peut être inférieure à la période restant à courir pour l'amortissement du prêt. Le
 remboursement anticipé du prêt n'a pas d'incidence sur la durée de la convention ;
 
@@ -147,7 +147,7 @@ logements sociaux. Le décret en Conseil d'Etat prévu au IX précise sa composi
 décision.
 
 VIII. – Pour l'application du présent article, sont assimilés aux logements locatifs mentionnés aux 3° et 5° de l'article L.
-351-2 du code de la construction et de l'habitation :
+831-1 du code de la construction et de l'habitation :
 
 1° Les structures d'hébergement temporaire ou d'urgence bénéficiant d'une aide de l'Etat ;
 
@@ -167,7 +167,7 @@ aide destinée aux personnes physiques à faibles revenus, pour financer l'acqui
 Outre les logements locatifs sociaux et assimilés mentionnés aux alinéas précédents, sont pris en compte pour le calcul de la
 décote prévue au présent article :
 
-a) Les logements occupés par des titulaires de contrats de location-accession mentionnés au 6° de l'article L. 351-2 du même
+a) Les logements occupés par des titulaires de contrats de location-accession mentionnés au 6° de l'article L. 831-1 du même
 code ;
 
 b) Les logements faisant l'objet d'une opération d'accession dans les conditions définies au dixième alinéa de l'article L.
@@ -229,7 +229,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2018-1317 du 28 décembre 2018 - art. 274
+  - Ordonnance n°2019-770 du 17 juillet 2019 - art. 8
 
 _Anciens textes_:
 
