--- a/02. Partie réglementaire/Article R3211-14 - 24885662.md
+++ b/02. Partie réglementaire/Article R3211-14 - 24885662.md
@@ -2,7 +2,7 @@
 
 La décote prévue à l'article L. 3211-7 peut être appliquée lorsqu'un terrain mentionné à l'article R. 3211-13 est aliéné en
 vue de recevoir plus de 50 % de surface de plancher affectée au logement et comportant des logements locatifs sociaux
-mentionnés aux 3° et 5° de l'article L. 351-2 du code de la construction et de l'habitation, des logements assimilés aux
+mentionnés aux 3° et 5° de l'article    L. 831-1 du code de la construction et de l'habitation, des logements assimilés aux
 logements locatifs sociaux ou des logements en accession à la propriété mentionnés au VIII de l'article L. 3211-7 du présent
 code ou faisant l'objet d'un bail réel solidaire.
 
@@ -14,7 +14,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2019-423 du 9 mai 2019 - art. 1
+  - Décret n°2019-772 du 24 juillet 2019 - art. 10
 
 _Anciens textes_:
 
@@ -28,4 +28,3 @@ _Cité par_:
 _Cite_:
 
   - Code général de la propriété des personnes publiques. - art. L3211-7
-  - Code de la construction et de l'habitation. - art. L351-2
