--- a/01. Partie législative/Article L2111-7 - 6361185.md
+++ b/01. Partie législative/Article L2111-7 - 6361185.md
@@ -1,13 +1,10 @@
 # Article L2111-7
 
 Le domaine public fluvial naturel est constitué des cours d'eau et lacs appartenant à l'Etat, à ses établissements publics,
-aux collectivités territoriales ou à leurs groupements, et classés dans leur domaine public fluvial.
+aux syndicats mixtes constitués sur le fondement de l'article L. 5721-2 du code général des collectivités territoriales, aux
+collectivités territoriales ou à leurs groupements, et classés dans leur domaine public fluvial.
 
 **Liens relatifs à cet article**
-
-_Codifié par_:
-
-  - Ordonnance n°2006-460 du 21 avril 2006
 
 _Cité par_:
 
@@ -22,11 +19,19 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. L5461-1 (V)
   - Code rural - art. L924-2 (V)
 
-_Modifié par_:
-
-  - Loi n°2015-991 du 7 août 2015 - art. 22 (V)
-
 _Anciens textes_:
 
   - Code du domaine public fluvial et de la navigation intérieure art. 1 al 1 à 9
   - Code du domaine public fluvial et de la navigation intérieure art. 1-1 al 1
+
+_Codifié par_:
+
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Loi n°2019-1428 du 24 décembre 2019 - art. 149
+
+_Cite_:
+
+  - Code général des collectivités territoriales - art. L5721-2
