--- a/02. Partie réglementaire/Article R3211-17-2 - 27311716.md
+++ b/02. Partie réglementaire/Article R3211-17-2 - 27311716.md
@@ -11,7 +11,9 @@ partie aux occupants de ces logements.
 II. – Le préfet de département adresse au directeur départemental des finances publiques un dossier comprenant, outre les
 éléments mentionnés à l'article R. 3211-17-1, un document précisant les conditions financières de réalisation de ce programme
 ainsi que, selon le cas, l'impact attendu de la répercussion intégrale de la décote sur le prix de revient des logements
-locatifs sociaux et assimilés ou sur le prix de cession des logements en accession à la propriété.
+locatifs sociaux et assimilés ou sur le prix de cession des logements en accession à la propriété. Ce document précise
+également s'il y a lieu d'appliquer le plafonnement de la décote défini au dernier alinéa du II de l'article L. 3211-7 et,
+dans ce cas, le coût moyen constaté pour la construction de logements sociaux.
 
 III. – Le montant de la décote sur la valeur vénale du terrain à céder est fixé par le directeur départemental des finances
 publiques, sur la base des éléments transmis par le préfet de département.
@@ -25,7 +27,7 @@ V. – L'acte d'aliénation est signé par le préfet de département.
 
 _Modifié par_:
 
-  - Décret n°2016-1160 du 25 août 2016 - art. 7
+  - Décret n°2019-1460 du 26 décembre 2019 - art. 2
 
 _Cite_:
 
