--- a/02. Partie réglementaire/Article R3211-32-7 - 28092034.md
+++ b/02. Partie réglementaire/Article R3211-32-7 - 28092034.md
@@ -20,11 +20,14 @@ de la décote. Sauf renonciation à vendre de l'établissement public concerné,
 III. – L'ensemble du dossier est transmis au préfet de région, aux fins d'établissement de la convention mentionnée au V de
 l'article L. 3211-7.
 
+IV.-Le plafonnement prévu au dernier alinéa du II de l'article L. 3211-7 est mis en œuvre dans les conditions fixées aux
+articles R. 3211-15, R. 3211-15-1 et R. 3211-17-2.
+
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Décret n°2016-1160 du 25 août 2016 - art. 13
+  - Décret n°2019-1460 du 26 décembre 2019 - art. 3
 
 _Cite_:
 
