--- a/01. Partie législative/Article L3211-13-1 - 26957590.md
+++ b/01. Partie législative/Article L3211-13-1 - 26957590.md
@@ -1,9 +1,14 @@
 # Article L3211-13-1
 
-I. – Nonobstant les dispositions législatives particulières applicables aux établissements publics de l'Etat et aux sociétés
-mentionnées à l'article 141 de la loi n° 2006-1771 du 30 décembre 2006 de finances rectificative pour 2006, l'article L.
-3211-7 est applicable, dans des conditions fixées par décret en Conseil d'Etat, à l'aliénation des terrains, bâtis ou non, du
-domaine privé leur appartenant ou dont la gestion leur a été confiée par la loi.
+I. – Nonobstant les dispositions législatives particulières applicables aux établissements publics de l'Etat, à la société
+SNCF Réseau mentionnée à l'article L. 2111-9 du code des transports et à sa filiale mentionnée au 5° de cet article, et aux
+sociétés mentionnées à l'article 141 de la loi n° 2006-1771 du 30 décembre 2006 de finances rectificative pour 2006,
+l'article L. 3211-7 est applicable, dans des conditions fixées par décret en Conseil d'Etat, à l'aliénation des terrains,
+bâtis ou non, du domaine privé leur appartenant ou dont la gestion leur a été confiée par la loi.
+
+Le décret prévu au premier alinéa du présent I précise les conditions dans lesquelles la société SNCF Réseau mentionnée à
+l'article L. 2111-9 du code des transports et sa filiale mentionnée au 5° de cet article émettent un avis conforme à
+l'inscription des biens dont la gestion leur a été confiée sur la liste mentionnée au 2° du II de l'article L. 3211-7.
 
 Le premier alinéa du présent I s'applique aux établissements publics dont la liste est fixée par décret.
 
@@ -37,4 +42,4 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Loi n°2018-1021 du 23 novembre 2018 - art. 24
+  - Ordonnance n°2019-552 du 3 juin 2019 - art. 16
