--- a/01. Partie législative/Article L3114-1 - 29332387.md
+++ b/01. Partie législative/Article L3114-1 - 29332387.md
@@ -1,20 +1,15 @@
 # Article L3114-1
 
-Des transferts de propriété d'infrastructures ferroviaires ou    d'installations de service appartenant à l'Etat ou à l'un
-des établissements publics constituant le groupe public ferroviaire mentionné à l'article L. 2101-1 du code des transports
-peuvent être opérés au profit d'une collectivité territoriale ou d'un groupement de collectivités territoriales, compétent en
-matière de développement économique, à la demande de l'assemblée délibérante de celui-ci. 
+Des transferts de propriété d'infrastructures ferroviaires ou d'installations de service appartenant à l'Etat peuvent être
+opérés au profit d'une collectivité territoriale ou d'un groupement de collectivités territoriales, compétent en matière de
+développement économique, à la demande de l'assemblée délibérante de celui-ci.
 
 Ces transferts concernent uniquement, sous réserve des besoins de la défense du pays, soit les lignes que la personne
-publique bénéficiaire  utilise ou envisage d'utiliser pour organiser des services de transport de personnes et qui sont
+publique bénéficiaire utilise ou envisage d'utiliser pour organiser des services de transport de personnes et qui sont
 séparées physiquement du reste du réseau ferré national, soit les lignes à faible trafic n'ayant pas été utilisées par des
 services de transport de personnes depuis plus de cinq ans.
 
 **Liens relatifs à cet article**
-
-_Modifié par_:
-
-  - Loi n°2015-991 du 7 août 2015 - art. 16
 
 _Cité par_:
 
@@ -23,6 +18,6 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. R3114-2 (V)
   - Code général de la propriété des personnes publ... - art. R3114-4 (V)
 
-_Cite_:
+_Modifié par_:
 
-  - Code des transports - art. L2101-1
+  - Ordonnance n°2019-552 du 3 juin 2019 - art. 16
