--- a/01. Partie législative/Article L3114-2 - 29332432.md
+++ b/01. Partie législative/Article L3114-2 - 29332432.md
@@ -1,20 +1,19 @@
 # Article L3114-2
 
 Ces transferts ne donnent lieu ni au versement de la contribution prévue à l'article 879 du code général des impôts, ni à
-perception d'impôts, de droits ou de taxes de quelque nature que ce soit. 
+perception d'impôts, de droits ou de taxes de quelque nature que ce soit.
 
-La personne publique bénéficiaire du transfert est substituée à l'Etat ou aux établissements publics constituant le groupe
-public ferroviaire mentionné à l'article L. 2101-1 du code des transports dans l'ensemble des droits et obligations liés aux
-biens qui lui sont transférés, à l'exception de ceux afférents à des dommages constatés avant la date du transfert et à des
-impôts ou taxes dont le fait générateur est antérieur à cette même date.
+La personne publique bénéficiaire du transfert est substituée à l'Etat, à la société SNCF Réseau mentionnée à l'article L.
+2111-9 du code des transports ou à la filiale mentionnée au 5° de cet article dans l'ensemble des droits et obligations liés
+aux biens qui lui sont transférés, à l'exception de ceux afférents à des dommages constatés avant la date du transfert et à
+des impôts ou taxes dont le fait générateur est antérieur à cette même date.
 
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Loi n°2015-991 du 7 août 2015 - art. 16
+  - Ordonnance n°2019-552 du 3 juin 2019 - art. 16
 
 _Cite_:
 
   - Code général des impôts, CGI. - art. 879
-  - Code des transports - art. L2101-1
