--- a/02. Partie réglementaire/Article R5112-31 - 29399243.md
+++ b/02. Partie réglementaire/Article R5112-31 - 29399243.md
@@ -3,10 +3,16 @@
 La commission départementale de vérification des titres siège à la cour d'appel dans le ressort de laquelle se situe le
 département.
 
-Le président de la commission peut toutefois décider de tenir des audiences au siège des tribunaux d'instance ou des
-tribunaux de grande instance du département.
+Le président de la commission peut toutefois décider de tenir des audiences au siège des tribunaux judiciaires du département
+ou, le cas échant, au siège de leurs chambres de proximité.
 
 Le secrétariat de la commission est assuré par le greffe de la cour d'appel.
+
+**Nota:**
+
+<font color="black">Conformément à l’article 36 du décret n° 2019-913 du 30 août 2019, ces dispositions entrent en vigueur le
+1
+    <sup>er</sup> janvier 2020.</font>
 
 **Liens relatifs à cet article**
 
@@ -14,11 +20,11 @@ _Codifié par_:
 
   - Décret n°2014-930 du 19 août 2014 - art.
 
-_Créé par_:
-
-  - Décret n°2014-930 du 19 août 2014 - art.
-
 _Cité par_:
+
+  - Décret n°2019-913 du 30 août 2019 - art. 15
+
+_Modifié par_:
 
   - Décret n°2019-913 du 30 août 2019 - art. 15
 
