--- a/01. Partie législative/Article L2132-23 - 6361315.md
+++ b/01. Partie législative/Article L2132-23 - 6361315.md
@@ -8,11 +8,11 @@ L. 2132-10, L. 2132-16 et L. 2132-17 :
 2° Les adjoints au maire et les gardes champêtres ; 
 
 3° Les personnels de Voies navigables de France sur le domaine qui lui a été confié, commissionnés par le directeur général
-de Voies navigables de France et assermentés devant le tribunal de grande instance, dans des conditions fixées par décret en
+de Voies navigables de France et assermentés devant le   tribunal judiciaire, dans des conditions fixées par décret en
 Conseil d'Etat ; 
 
 4° Les agents des ports autonomes fluviaux sur le domaine appartenant à ces ports ou qui leur a été confié, assermentés à cet
-effet devant le tribunal de grande instance ; 
+effet devant le   tribunal judiciaire ; 
 
 5° Les agents mentionnés à l'article L. 2132-21. 
 
@@ -24,6 +24,11 @@ son identité, ils en rendent compte à tout officier de police judiciaire terri
 contrevenant de lui communiquer son identité. Lorsque l'officier de police judiciaire procède à une vérification d'identité
 dans les conditions prévues à l'article 78-3 du code de procédure pénale, le délai prévu au troisième alinéa du même article
 court à compter du relevé d'identité.
+
+**Nota:**
+
+Conformément à l'article 36 de l'ordonnance n° 2019-964 du 18 septembre 2019, ces dispositions entrent en vigueur au 1er
+janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -52,7 +57,7 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Ordonnance n°2016-665 du 25 mai 2016 - art. 1
+  - Ordonnance n°2019-964 du 18 septembre 2019 - art. 35 (VD)
 
 _Cite_:
 
