--- a/01. Partie législative/Article L3211-20 - 6361441.md
+++ b/01. Partie législative/Article L3211-20 - 6361441.md
@@ -1,20 +1,28 @@
 # Article L3211-20
 
 L'Etat est autorisé à aliéner, dans la forme ordinaire des ventes des biens de l'Etat, les biens mobiliers et les valeurs
-provenant des successions en déshérence dont l'envoi en possession définitive a été prononcé par le tribunal de grande
-instance.
+provenant des successions en déshérence dont l'envoi en possession définitive a été prononcé par le   tribunal judiciaire. 
 
-Les inscriptions de rentes sur l'Etat, comme toutes les autres valeurs cotées, sont négociées à une bourse de valeurs.
+Les inscriptions de rentes sur l'Etat, comme toutes les autres valeurs cotées, sont négociées à une bourse de valeurs. 
 
 Ces dispositions ne portent pas atteinte aux droits des tiers et spécialement aux droits des héritiers et légataires
 éventuels, qui sont admis à exercer leur action sur le prix net des biens vendus, dans les mêmes conditions et délais qu'ils
 eussent été fondés à l'exercer sur ces biens eux-mêmes.
 
+**Nota:**
+
+Conformément à l'article 36 de l'ordonnance n° 2019-964 du 18 septembre 2019, ces dispositions entrent en vigueur au 1er
+janvier 2020.
+
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
-  - Ordonnance 2006-460 2006-04-21 JORF 22 avril 2006
+  - Ordonnance n°2006-460 du 21 avril 2006
+
+_Modifié par_:
+
+  - Ordonnance n°2019-964 du 18 septembre 2019 - art. 35 (VD)
 
 _Anciens textes_:
 
