--- a/02. Partie réglementaire/Article R2331-10 - 24885575.md
+++ b/02. Partie réglementaire/Article R2331-10 - 24885575.md
@@ -1,11 +1,16 @@
 # Article R2331-10
 
-Devant le tribunal de grande instance, l'instruction des instances mentionnées aux articles R. 2331-1 à R. 2331-3, R. 3231-1
-et R. 4111-11 auxquelles l'Etat est partie se fait par simples mémoires.
+Devant le   tribunal judiciaire, l'instruction des instances mentionnées aux articles R. 2331-1 à R. 2331-3, R. 3231-1 et R.
+4111-11 auxquelles l'Etat est partie se fait par simples mémoires. 
 
-Les parties ne sont pas tenues de constituer avocat.
+Les parties ne sont pas tenues de constituer avocat. 
 
 Elles peuvent présenter des explications orales.
+
+**Nota:**
+
+Conformément à l’article 9 du décret n° 2019-966 du 18 septembre 2019, les présentes dispositions entrent en vigueur le 1er
+janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -13,9 +18,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2019-966 du 18 septembre 2019 - art. 8
 
 _Anciens textes_:
 
@@ -23,6 +28,6 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R2331-1 (V)
-  - Code général de la propriété des personnes publ... - art. R3231-1 (V)
-  - Code général de la propriété des personnes publ... - art. R4111-11 (V)
+  - Code général de la propriété des personnes publiques. - art. R2331-1
+  - Code général de la propriété des personnes publiques. - art. R3231-1
+  - Code général de la propriété des personnes publiques. - art. R4111-11
