--- a/02. Partie réglementaire/Article R5112-35 - 29399251.md
+++ b/02. Partie réglementaire/Article R5112-35 - 29399251.md
@@ -1,7 +1,12 @@
 # Article R5112-35
 
 Les requérants peuvent présenter leurs explications à la commission et ont la faculté de se faire assister ou représenter
-dans les conditions fixées à l'article 828 du code de procédure civile.
+dans les conditions fixées à l'article 762 du code de procédure civile.
+
+**Nota:**
+
+Conformément au I de l’article 55 du décret n° 2019-1333 du 11 décembre 2019, ces dispositions entrent en vigueur le 1er
+janvier 2020. Elles sont applicables aux instances en cours à cette date.
 
 **Liens relatifs à cet article**
 
@@ -9,9 +14,9 @@ _Codifié par_:
 
   - Décret n°2014-930 du 19 août 2014 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2014-930 du 19 août 2014 - art.
+  - Décret n°2019-1333 du 11 décembre 2019 - art. 23
 
 _Anciens textes_:
 
@@ -19,4 +24,4 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code de procédure civile - art. 828 (M)
+  - Code de procédure civile - art. 762
