--- a/02. Partie réglementaire/Article R5112-40 - 29399261.md
+++ b/02. Partie réglementaire/Article R5112-40 - 29399261.md
@@ -1,9 +1,14 @@
 # Article R5112-40
 
-Le procureur de la République près le tribunal de grande instance dans le ressort duquel la commission a son siège reçoit
-copie de la convocation adressée aux membres de la commission.
+Le procureur de la République près le   tribunal judiciaire dans le ressort duquel la commission a son siège reçoit copie de
+la convocation adressée aux membres de la commission. 
 
 Il peut intervenir pour faire connaître son avis sur l'application de la loi.
+
+**Nota:**
+
+Conformément à l’article 9 du décret n° 2019-966 du 18 septembre 2019, les présentes dispositions entrent en vigueur le 1er
+janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -11,9 +16,9 @@ _Codifié par_:
 
   - Décret n°2014-930 du 19 août 2014 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2014-930 du 19 août 2014 - art.
+  - Décret n°2019-966 du 18 septembre 2019 - art. 8
 
 _Anciens textes_:
 
