--- a/02. Partie réglementaire/Article R2132-2 - 39426474.md
+++ b/02. Partie réglementaire/Article R2132-2 - 39426474.md
@@ -2,17 +2,22 @@
 
 Les personnels de Voies navigables de France, mentionnés à l'article L. 2132-23, compétents pour constater les contraventions
 de grande voirie définies aux articles L. 2132-5 à L. 2132-10, L. 2132-16 et L. 2132-17 sont commissionnés, de manière
-individuelle, par le directeur général de Voies navigables de France et assermentés devant le tribunal de grande instance
-dans les conditions prévues par les articles R. 2132-3 à R. 2132-5. 
+individuelle, par le directeur général de Voies navigables de France et assermentés devant le tribunal judiciaire dans les
+conditions prévues par les articles R. 2132-3 à R. 2132-5.
 
 Le directeur général de Voies navigables de France peut déléguer ses pouvoirs en matière de commissionnement aux directeurs
 des services territoriaux de l'établissement.
 
+**Nota:**
+
+Conformément à l’article 9 du décret n° 2019-966 du 18 septembre 2019, les présentes dispositions entrent en vigueur le 1er
+janvier 2020.
+
 **Liens relatifs à cet article**
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2019-1232 du 26 novembre 2019 - art. 4
+  - Décret n°2019-966 du 18 septembre 2019 - art. 8
 
 _Cite_:
 
