--- a/02. Partie réglementaire/Article R2222-25 - 24885394.md
+++ b/02. Partie réglementaire/Article R2222-25 - 24885394.md
@@ -3,18 +3,23 @@
 Si le disposant n'a pu être retrouvé, si, au cas où il est décédé, tous ses ayants droit sont restés inconnus ou inactifs,
 s'ils ont refusé de signer le procès-verbal de restitution ou, si malgré cette signature, les meubles n'ont pu faire l'objet
 d'une remise effective la gestion des biens est confiée au directeur départemental des finances publiques mentionné à
-l'article R. 2222-24, par une ordonnance rendue à la requête du préfet par le président du tribunal de grande instance dans
-le ressort duquel se trouve le siège du service de l'administration chargée des domaines appelé à gérer les biens.
+l'article R. 2222-24, par une ordonnance rendue à la requête du préfet par le président du   tribunal judiciaire dans le
+ressort duquel se trouve le siège du service de l'administration chargée des domaines appelé à gérer les biens. 
 
 La requête est introduite au plus tard six mois après la date de publication au Journal officiel de la République française
-de l'arrêté de restitution.
+de l'arrêté de restitution. 
 
 L'ordonnance du président du tribunal est signifiée au disposant ou à ses ayants droit dont l'adresse est connue. Dans le cas
 contraire, la signification est faite conformément aux dispositions de l'article 659 du code de procédure civile ; en outre,
-l'ordonnance est publiée par extrait au Journal officiel de la République française.
+l'ordonnance est publiée par extrait au Journal officiel de la République française. 
 
 La remise des biens à l'administration chargée des domaines par l'administration détentrice est constatée par un procès-
 verbal dressé contradictoirement.
+
+**Nota:**
+
+Conformément à l’article 9 du décret n° 2019-966 du 18 septembre 2019, les présentes dispositions entrent en vigueur le 1er
+janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -22,9 +27,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2019-966 du 18 septembre 2019 - art. 8
 
 _Anciens textes_:
 
@@ -32,5 +37,5 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R2222-24 (V)
-  - Code de procédure civile - art. 659 (M)
+  - Code général de la propriété des personnes publiques. - art. R2222-24
+  - Code de procédure civile - art. 659
