--- a/02. Partie réglementaire/Article R3211-6 - 24885643.md
+++ b/02. Partie réglementaire/Article R3211-6 - 24885643.md
@@ -6,13 +6,10 @@ directeur départemental des finances publiques.
 Lorsque la valeur vénale de l'immeuble excède un montant fixé par arrêté du ministre chargé du domaine, la cession est
 autorisée par le ministre chargé du domaine.
 
-Préalablement à l'autorisation mentionnée à l'alinéa précédent, la commission pour la transparence et la qualité des
-opérations immobilières de l'Etat émet un avis sur le projet de cession lorsque ce dernier prévoit une cession dans les
-conditions mentionnées à l'article R. 3211-7. L'avis porte sur le respect des règles figurant à l'article R. 3211-7 et sur la
-qualité des procédures envisagées. A cette fin, le directeur général des finances publiques adresse à la commission le
-dossier du projet, accompagné d'un rapport de présentation. Cette procédure ne s'applique pas en cas d'exercice du droit de
-priorité prévue à l'article L. 240-1 du code de l'urbanisme. La commission émet son avis dans le délai d'un mois à compter de
-la réception du dossier. Ce délai peut être prorogé une fois par le ministre chargé du domaine.
+**Nota:**
+
+Conformément à l'article 19 du décret n° 2019-1379 du 18 décembre 2019, ces dispositions entrent en vigueur le 1er janvier
+2020.
 
 **Liens relatifs à cet article**
 
@@ -22,7 +19,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2012-203 du 10 février 2012 - art. 5
+  - Décret n°2019-1379 du 18 décembre 2019 - art. 13 (V)
 
 _Anciens textes_:
 
