--- a/02. Partie réglementaire/Article R5112-31 - 29399243.md
+++ b/02. Partie réglementaire/Article R5112-31 - 29399243.md
@@ -1,12 +1,17 @@
 # Article R5112-31
 
 La commission départementale de vérification des titres siège à la cour d'appel dans le ressort de laquelle se situe le
-département.
+département. 
 
 Le président de la commission peut toutefois décider de tenir des audiences au siège des tribunaux d'instance ou des
-tribunaux de grande instance du département.
+tribunaux judiciaires du département. 
 
 Le secrétariat de la commission est assuré par le greffe de la cour d'appel.
+
+**Nota:**
+
+Conformément à l’article 9 du décret n° 2019-966 du 18 septembre 2019, les présentes dispositions entrent en vigueur le 1er
+janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -14,13 +19,13 @@ _Codifié par_:
 
   - Décret n°2014-930 du 19 août 2014 - art.
 
-_Créé par_:
-
-  - Décret n°2014-930 du 19 août 2014 - art.
-
 _Cité par_:
 
   - Décret n°2019-913 du 30 août 2019 - art. 15
+
+_Modifié par_:
+
+  - Décret n°2019-966 du 18 septembre 2019 - art. 8
 
 _Anciens textes_:
 
