--- a/02. Partie réglementaire/Article R5211-4 - 29399437.md
+++ b/02. Partie réglementaire/Article R5211-4 - 29399437.md
@@ -1,21 +1,26 @@
 # Article R5211-4
 
 Pour l'application du présent code à Saint-Pierre-et-Miquelon, les références aux termes énumérés ci-après sont ainsi
-remplacés :
+remplacés : 
 
-1° " Département " et " région " par " collectivité territoriale " ;
+1° " Département " et " région " par " collectivité territoriale " ; 
 
-2° " Président du conseil général " par " président du conseil territorial " ;
+2° " Président du conseil général " par " président du conseil territorial " ; 
 
-3° " Conseil général " par " conseil territorial " ;
+3° " Conseil général " par " conseil territorial " ; 
 
-4° " tribunal de grande instance " par " tribunal de première instance " ;
+4° "   tribunal judiciaire " par " tribunal de première instance " ; 
 
-5° " cour d'appel " par " tribunal supérieur d'appel " ;
+5° " cour d'appel " par " tribunal supérieur d'appel " ; 
 
-6° " préfet de département " et " préfet de région " par " préfet " ;
+6° " préfet de département " et " préfet de région " par " préfet " ; 
 
 7° " directeur départemental des finances publiques " par " directeur local des finances publiques ".
+
+**Nota:**
+
+Conformément à l’article 9 du décret n° 2019-966 du 18 septembre 2019, les présentes dispositions entrent en vigueur le 1er
+janvier 2020.
 
 **Liens relatifs à cet article**
 
@@ -23,6 +28,6 @@ _Codifié par_:
 
   - Décret n°2014-930 du 19 août 2014 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2014-930 du 19 août 2014 - art.
+  - Décret n°2019-966 du 18 septembre 2019 - art. 8
