--- a/02. Partie réglementaire/Article R2123-2 - 24884977.md
+++ b/02. Partie réglementaire/Article R2123-2 - 24884977.md
@@ -4,8 +4,7 @@ La convention de gestion est passée par l’administration chargée des domaine
 
 Lorsqu’elle porte sur un ou plusieurs immeubles situés dans un seul département, elle est signée au nom de l’Etat par le
 préfet, agissant en qualité de représentant du ministre chargé du domaine, et sur proposition du responsable dans le
-département du service gestionnaire. Il ne peut être signé de convention d’une durée supérieure à dix-huit ans qu’avec
-l’autorisation du ministre chargé du domaine.
+département du service gestionnaire.
 
 Lorsqu’elle porte sur des immeubles situés dans plusieurs départements ou à l’étranger, la convention de gestion est signée
 au nom de l’Etat par le ministre chargé du domaine, sur proposition du ministre gestionnaire.
@@ -18,17 +17,13 @@ signée par le ministre de la défense ou son représentant.
 
 **Liens relatifs à cet article**
 
-_Codifié par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Créé par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-68 du 30 janvier 2020 - art. 5
 
 _Anciens textes_:
 
-  - Code du domaine de l'Etat - art. R128-3 (Ab)
+  - Code du domaine de l'Etat - art. R128-3 (Ab),  ecqc les conventions de gestion portant sur des immeubles dépendant du domaine public de l'Etat. ; art. L51-1, les "mots "passée par le service des domaines, sur la proposition du ministre affectataire ou gestionnaire de l'immeuble", ecqc les conventions de gestion portant sur des immeubles dépendant du domaine public de l'État".
 
 _Cite_:
 
