--- a/02. Partie réglementaire/Article R2222-9 - 24885344.md
+++ b/02. Partie réglementaire/Article R2222-9 - 24885344.md
@@ -4,8 +4,7 @@ La convention de gestion est passée par l'administration chargée des domaines.
 
 Lorsqu'elle porte sur un ou plusieurs immeubles situés dans un seul département, elle est signée au nom de l'Etat par le
 préfet agissant en qualité de représentant du ministre chargé du domaine et sur proposition du responsable dans le
-département du service gestionnaire. Il ne peut être signé de convention d'une durée supérieure à dix-huit ans qu'avec
-l'autorisation du ministre chargé du domaine.
+département du service gestionnaire.
 
 Lorsqu'elle porte sur des immeubles situés dans plusieurs départements ou à l'étranger, la convention de gestion est signée
 au nom de l'Etat par le ministre chargé du domaine, sur proposition du ministre gestionnaire. Dans ce cas, la convention peut
@@ -15,15 +14,21 @@ pays où sont situés les immeubles.
 Lorsqu'elle porte sur un immeuble militaire mentionné au 6° de l'article R. 2222-8, la convention de gestion est également
 signée par le ministre de la défense ou son représentant.
 
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
+
 **Liens relatifs à cet article**
 
 _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-68 du 30 janvier 2020 - art. 5
 
 _Anciens textes_:
 
@@ -37,4 +42,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R2222-8 (V)
+  - Code général de la propriété des personnes publiques. - art. R2222-8
