--- a/02. Partie réglementaire/Article R2122-10 - 24884847.md
+++ b/02. Partie réglementaire/Article R2122-10 - 24884847.md
@@ -3,9 +3,14 @@
 Dans le cas où l'occupation du domaine public de l'Etat ou du domaine propre d'un établissement public de l'Etat a pour
 fondement une concession de service public, d'outillage public ou d'installations portuaires de plaisance, cette concession
 peut être constitutive de droit réel pour son titulaire dans la mesure et aux conditions prévues par le cahier des charges et
-sous réserve que les dispositions correspondantes du cahier des charges aient reçu l'accord, selon que le montant des travaux
-mis à la charge du concessionnaire est inférieur ou supérieur à 3 millions d'euros hors taxes, du préfet ou du ministre
-chargé du domaine et du ministre intéressé.
+sous réserve que les dispositions correspondantes du cahier des charges aient reçu l'accord
+du préfet.
+
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
 
@@ -13,9 +18,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-68 du 30 janvier 2020 - art. 2
 
 _Anciens textes_:
 
