--- a/02. Partie réglementaire/Article R2122-15 - 24884861.md
+++ b/02. Partie réglementaire/Article R2122-15 - 24884861.md
@@ -2,32 +2,33 @@
 
 La décision relative à une autorisation constitutive de droit réel sur le domaine propre d'un établissement public de l'Etat
 est prise par l'autorité compétente de cet établissement déterminée ainsi qu'il est prévu au quatrième alinéa de l'article R.
-2122-4. 
+2122-4.
 
 Il en va de même de la décision sur la demande d'autorisation soumise à un établissement public de l'Etat qui tient
 expressément du texte qui lui confie ou concède la gestion d'un élément du domaine public le pouvoir d'y délivrer des titres
-d'occupation constitutifs de droits réels. 
+d'occupation constitutifs de droits réels.
 
 Les dispositions des deux alinéas précédents s'appliquent aux organismes gestionnaires du domaine ne détenant pas le statut
-d'établissement public. 
+d'établissement public.
 
 Toutefois, s'il apparaît à cette autorité que tout ou partie des ouvrages, constructions et installations de caractère
 immobilier dont la réalisation est envisagée sont nécessaires à la continuité du service public auquel est affectée la
-dépendance du domaine public concernée par la demande, il ne peut y être fait droit que sur accord préalable du ministre de
-tutelle et du ministre chargé du domaine, ou du préfet après avis du directeur départemental des finances publiques, selon
-que le montant des travaux projetés est ou non supérieur à 3 millions d'euros hors taxes. 
+dépendance du domaine public concernée par la demande, il ne peut y être fait droit que sur accord préalable du préfet après
+avis du directeur départemental des finances publiques.
 
-Faute d'obtention de cet accord préalable dans un délai de deux mois à compter de la saisine du préfet ou de quatre mois à
-compter de la saisine des ministres, l'autorité compétente de l'établissement public ou de l'organisme gestionnaire du
-domaine est tenue de refuser le caractère constitutif de droit réel au titre d'occupation demandé.
+Faute d'obtention de cet accord préalable dans un délai de deux mois à compter de la saisine du préfet, l'autorité compétente
+de l'établissement public ou de l'organisme gestionnaire du domaine est tenue de refuser le caractère constitutif de droit
+réel au titre d'occupation demandé.
+
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
 
 _Codifié par_:
-
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
-
-_Créé par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
@@ -43,10 +44,14 @@ _Cité par_:
   - Code général de la propriété des personnes publ... - art. R2122-52 (V)
   - Code général de la propriété des personnes publ... - art. R2122-53-1 (V)
 
+_Modifié par_:
+
+  - Décret n°2020-68 du 30 janvier 2020 - art. 4
+
 _Anciens textes_:
 
   - Code du domaine de l'Etat - art. R57-4 (Ab), paragraphe II.
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R2122-4 (V)
+  - Code général de la propriété des personnes publiques. - art. R2122-4
