--- a/02. Partie réglementaire/Article R2222-1 - 24885320.md
+++ b/02. Partie réglementaire/Article R2222-1 - 24885320.md
@@ -3,9 +3,11 @@
 La location d'un immeuble du domaine privé de l'Etat est consentie par le préfet, après fixation par le directeur
 départemental des finances publiques des conditions financières du contrat.
 
-Toutefois, les locations constitutives de droits réels sont autorisées par le ministre chargé du domaine lorsque la valeur
-vénale de l'immeuble, déterminée par le directeur départemental des finances publiques, est supérieure au montant fixé par
-l'arrêté du ministre chargé du domaine mentionné au dernier alinéa de l'article R. 3211-6.
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
 
@@ -13,9 +15,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-68 du 30 janvier 2020 - art. 5
 
 _Anciens textes_:
 
@@ -29,4 +31,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R3211-6 (V)
+  - Code général de la propriété des personnes publiques. - art. R3211-6
