--- a/02. Partie réglementaire/Article R3211-23 - 24885680.md
+++ b/02. Partie réglementaire/Article R3211-23 - 24885680.md
@@ -1,9 +1,16 @@
 # Article R3211-23
 
-Les dispositions de l'article R. 3211-6 sont applicables aux concessions accordées en application de l'article L. 3211-10.
+Les concessions accordées en application de l'article L. 3211-10 sont consenties par le préfet, au prix convenu entre les
+parties, selon les modalités financières fixées par le directeur départemental des finances publiques.
 
 Toutefois, lorsque l'opération a donné lieu à une enquête publique, la concession est approuvée par décret en Conseil d'Etat
 en cas d'avis défavorable du commissaire enquêteur ou de la commission d'enquête.
+
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
 
@@ -11,9 +18,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-68 du 30 janvier 2020 - art. 6
 
 _Anciens textes_:
 
@@ -21,5 +28,5 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L3211-10 (V)
-  - Code général de la propriété des personnes publ... - art. R3211-6 (V)
+  - Code général de la propriété des personnes publiques. - art. L3211-10
+  - Code général de la propriété des personnes publiques. - art. R3211-6
