--- a/02. Partie réglementaire/Article R3211-25 - 24885684.md
+++ b/02. Partie réglementaire/Article R3211-25 - 24885684.md
@@ -1,10 +1,16 @@
 # Article R3211-25
 
 Les cessions amiables de servitudes constituées au profit de l'Etat sont consenties par le préfet, après avis du directeur
-départemental des finances publiques, dans les conditions prévues à l'article R. 3211-6.
+départemental des finances publiques, qui fixe les conditions financières.
 
 Le projet de cession est préalablement affiché à la mairie de la commune de situation des lieux et soumis à une enquête d'une
 durée de dix jours.
+
+**Nota:**
+
+Conformément à l'article 42 du décret n° 2020-68 du 30 janvier 2020, ces dispositions entrent en vigueur le 1er février 2020.
+Les demandes de décisions administratives individuelles présentées avant cette date demeurent soumises aux dispositions
+applicables à la date de leur présentation.
 
 **Liens relatifs à cet article**
 
@@ -12,9 +18,9 @@ _Codifié par_:
 
   - Décret n°2011-1612 du 22 novembre 2011 - art.
 
-_Créé par_:
+_Modifié par_:
 
-  - Décret n°2011-1612 du 22 novembre 2011 - art.
+  - Décret n°2020-68 du 30 janvier 2020 - art. 7
 
 _Anciens textes_:
 
@@ -22,4 +28,4 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R3211-6 (V)
+  - Code général de la propriété des personnes publiques. - art. R3211-6
