--- a/01. Partie législative/Article L3212-3 - 6361450.md
+++ b/01. Partie législative/Article L3212-3 - 6361450.md
@@ -9,11 +9,14 @@ utilisation dont ils n'ont plus l'emploi, aux mêmes conditions que celles fixé
 publics au 5° de l'article L. 3212-2 ainsi que les biens archéologiques mobiliers dans les conditions prévues à l'article L.
 546-6 du code du patrimoine.
 
+Ils peuvent également céder gratuitement les biens de scénographie dont ils n'ont plus l'usage, aux mêmes conditions que
+celles fixées pour l'Etat au 7° de l'article L. 3212-2 du présent code.
+
 **Liens relatifs à cet article**
 
 _Modifié par_:
 
-  - Ordonnance n°2017-1117 du 29 juin 2017 - art. 2
+  - Loi n°2020-105 du 10 février 2020 - art. 53
 
 _Anciens textes_:
 
@@ -27,4 +30,4 @@ _Cité par_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. L3212-2 (M)
+  - Code général de la propriété des personnes publiques. - art. L3212-2
