--- a/02. Partie réglementaire/Article R1211-8 - 24884656.md
+++ b/02. Partie réglementaire/Article R1211-8 - 24884656.md
@@ -1,12 +1,9 @@
 # Article R1211-8
 
-Les opérations immobilières qualifiées secrètes par décision du ministre de la défense, poursuivies par voie d'expropriation
-pour cause d'utilité publique par les services publics relevant de ce ministre ou placés sous sa tutelle, sont soumises à la
-commission d'examen des opérations immobilières présentant un caractère secret prévue par l'article R. 122-5 du code de
-l'expropriation pour cause d'utilité publique. 
-
-L'avis du directeur départemental des finances publiques prévu à l'article R. 1211-3 du présent code figure au dossier soumis
-à la commission.
+Les opérations immobilières qualifiées d'opérations sensibles intéressant la défense nationale en application de l'article L.
+2391-1 du code de la défense et les servitudes qui leur sont associées, poursuivies par voie d'expropriation pour cause
+d'utilité publique par les services publics relevant du ministre de la défense ou placés sous sa tutelle, sont soumises à la
+commission mentionnée à l'article R. 122-5 du code de l'expropriation pour cause d'utilité publique.
 
 **Liens relatifs à cet article**
 
@@ -16,7 +13,7 @@ _Codifié par_:
 
 _Modifié par_:
 
-  - Décret n°2014-1635 du 26 décembre 2014 - art. 4
+  - Décret n°2020-133 du 18 février 2020 - art. 8
 
 _Anciens textes_:
 
@@ -25,5 +22,5 @@ _Anciens textes_:
 
 _Cite_:
 
-  - Code général de la propriété des personnes publ... - art. R1211-3 (VD)
-  - Code de l'expropriation pour cause d'utilité pu... - art. R122-5 (V)
+  - Code de la défense. - art. L2391-1
+  - Code de l'expropriation pour cause d'utilité publique - art. R122-5
