--- a/01. Partie législative/Article L2132-23 - 6361315.md
+++ b/01. Partie législative/Article L2132-23 - 6361315.md
@@ -1,24 +1,29 @@
 # Article L2132-23
 
 Ont compétence pour constater concurremment les contraventions en matière de grande voirie définies aux articles L. 2132-5 à
-L. 2132-10, L. 2132-16 et L. 2132-17 : 
+L. 2132-10, L. 2132-16 et L. 2132-17 :
 
-1° Les fonctionnaires des collectivités territoriales et de leurs groupements ; 
+1° Les fonctionnaires des collectivités territoriales et de leurs groupements ;
 
-2° Les adjoints au maire et les gardes champêtres ; 
+2° Les adjoints au maire et les gardes champêtres ;
 
 3° Les personnels de Voies navigables de France sur le domaine qui lui a été confié, commissionnés par le directeur général
-de Voies navigables de France et assermentés devant le   tribunal judiciaire, dans des conditions fixées par décret en
-Conseil d'Etat ; 
+de Voies navigables de France et assermentés devant le tribunal judiciaire, dans des conditions fixées par décret en Conseil
+d'Etat ;
 
 4° Les agents des ports autonomes fluviaux sur le domaine appartenant à ces ports ou qui leur a été confié, assermentés à cet
-effet devant le   tribunal judiciaire ; 
+effet devant le tribunal judiciaire ;
 
-5° Les agents mentionnés à l'article L. 2132-21. 
+5° Les agents mentionnés à l'article L. 2132-21 ;
 
-Les fonctionnaires mentionnés ci-dessus qui n'ont pas prêté serment en justice le prêtent devant le préfet. 
+6° Les personnels de l'établissement public Société du Canal Seine-Nord Europe sur le domaine public fluvial qu'il gère en
+application de l'article 14 de l'ordonnance n° 2016-489 du 21 avril 2016 relative à la Société du Canal Seine-Nord Europe,
+commissionnés par le président du directoire de cet établissement public et assermentés devant le tribunal de grande
+instance.
 
-Lorsqu'ils constatent une contravention en matière de grande voirie, les agents mentionnés aux 1° à 5° sont habilités à
+Les fonctionnaires mentionnés ci-dessus qui n'ont pas prêté serment en justice le prêtent devant le préfet.
+
+Lorsqu'ils constatent une contravention en matière de grande voirie, les agents mentionnés aux 1° à 6° sont habilités à
 relever l'identité de l'auteur de la contravention. Si l'intéressé refuse ou se trouve dans l'impossibilité de justifier de
 son identité, ils en rendent compte à tout officier de police judiciaire territorialement compétent, qui peut ordonner au
 contrevenant de lui communiquer son identité. Lorsque l'officier de police judiciaire procède à une vérification d'identité
@@ -27,8 +32,16 @@ court à compter du relevé d'identité.
 
 **Nota:**
 
-Conformément à l'article 36 de l'ordonnance n° 2019-964 du 18 septembre 2019, ces dispositions entrent en vigueur au 1er
-janvier 2020.
+Conformément au VIII de l’article 134 de la loi n° 2019-1428 du 24 décembre 2019 : Le présent article entre en vigueur à la
+date d'entrée en vigueur du décret mentionné à l'article 15 de l'ordonnance n° 2016-489 du 21 avril 2016 précitée, dans sa
+rédaction résultant de la présente loi, et au plus tard le 1er avril 2020. Ce décret prévoit en outre les dispositions
+transitoires nécessaires à la continuité du fonctionnement de l'établissement public Société du Canal Seine-Nord Europe à
+compter de l'entrée en vigueur du présent article.
+
+A l'issue d'un délai de deux mois à compter de l'entrée en vigueur du présent article, le conseil de surveillance de
+l'établissement public Société du Canal Seine-Nord Europe peut valablement se réunir pour la première fois, même s'il n'a pas
+été procédé à la désignation de la totalité de ses membres, dès lors que plus de la moitié des membres au moins a été
+désignée.
 
 **Liens relatifs à cet article**
 
@@ -36,10 +49,6 @@ _Anciens textes_:
 
   - Code du domaine public fluvial et de la navigation intérieure art. 41
   - Loi n°2019-1428 du 24 décembre 2019 - art. 134 (V)
-
-_Codifié par_:
-
-  - Ordonnance n°2006-460 du 21 avril 2006
 
 _Cité par_:
 
@@ -57,11 +66,4 @@ _Cité par_:
 
 _Modifié par_:
 
-  - Ordonnance n°2019-964 du 18 septembre 2019 - art. 35 (VD)
-
-_Cite_:
-
-  - Code général de la propriété des personnes publiques. - art. L2132-16
-  - Code général de la propriété des personnes publiques. - art. L2132-21
-  - Code général de la propriété des personnes publiques. - art. L2132-5
-  - Code de procédure pénale - art. 78-3
+  - Loi n°2019-1428 du 24 décembre 2019 - art. 134 (V)
